Fixed layout issues when map or picture not displayed

--- a/components/SummaryLocationPicture.module.scss
+++ b/components/SummaryLocationPicture.module.scss
@@ -5,6 +5,7 @@
   background-color: $color-bus-light;
   padding: $spacing-s;
   margin-top: $spacing-xs;
+  margin-bottom: $spacing-5-xl;
 
   > div:last-child {
     margin-bottom: 0;
